--- a/css/main-green.css
+++ b/css/main-green.css
@@ -640,7 +640,7 @@ body > footer .copyrights {
 }
 
 .site-title {
-  color: #49515d;
+  color: #000000;
   font-size: 20px;
   font-weight: 500;
   font-family: 'Montserrat', Helvetica, sans-serif;
@@ -649,7 +649,7 @@ body > footer .copyrights {
 }
 
 .site-title span {
-  color: #7038ff;
+  color: #000000;
 }
 
 .header.sticked .site-title {
