--- a/css/main-green.css
+++ b/css/main-green.css
@@ -809,7 +809,7 @@ body > footer .copyrights {
 }
 
 .custom-page-content .page-header.color-1 {
-  background-color: #b9ab7e;
+  background-color: #f9bf3a;
   background-image: url(../images/sp_main_bg.png);
   background-size: cover;
   -webkit-background-size: cover;
